--- a/CNGGroups.ipynb
+++ b/CNGGroups.ipynb
@@ -45,7 +45,9 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(columns = [\"CNG\", \"CNG_Group\"])"
+    "df = pd.DataFrame(columns = [\"CNG\", \"CNG_Group\"])\n",
+    "#defining a dataframe in which we have the list of all CNG_Groups to which a CNG Belongs\n",
+    "#We define it in such a way because we want to use it in an inner join to add CNG_Group nodes in the graph."
    ]
   },
   {
@@ -107,19 +109,23 @@
    "outputs": [],
    "source": [
     "z =0\n",
+    "#z = index of the dataframe\n",
+    "\n",
     "for key in dictnoun.keys():\n",
+    "    #key is a CNG_Group\n",
     "    for value in dictnoun[key]:\n",
+    "        #value is CNG\n",
     "        df.loc[z] = [value, key]\n",
+    "        #storing CNG and its GROUP\n",
     "        z += 1\n",
+    "        #incrementing index\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -202,9 +208,11 @@
    },
    "outputs": [],
    "source": [
+    "#same as above but for verbs groups\n",
     "for key in dictverb.keys():\n",
     "    for value in dictverb[key]:\n",
     "        df.loc[z] = [(-1)*value, key]\n",
+    "        #-1 is multipled as CNG of Verbs are negative.\n",
     "        z += 1\n",
     "        "
    ]
@@ -213,7 +221,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [
     {
@@ -636,7 +644,8 @@
    },
    "outputs": [],
    "source": [
-    "df.to_sql(\"CNG&CNGG\", conn)"
+    "df.to_sql(\"CNG&CNGG\", conn)\n",
+    "#dumping data in a table"
    ]
   },
   {
@@ -648,48 +657,6 @@
    "outputs": [],
    "source": [
     "conn.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\nRun this sql code to create our final graph with 4 nodes CNG, Lemma, Word, CNG_Groups\\nDROP TABLE IF EXISTS Tempgraph;\\nCREATE TABLE Tempgraph(Entity_1 TEXT, Type_1 TEXT, Entity_2 TEXT, Type_2 TEXT, Weight INTEGER, CNG_Group TEXT);\\n\\n\\nINSERT INTO Tempgraph(Entity_1, Type_1, Entity_2, Type_2, Weight, CNG_Group)\\nSELECT t1.Entity_1, t1.Type_1, t1.Entity_2, t1.Type_2, t1.Weight, t2.CNG_Group\\nFROM Graph t1, 'CNG&CNGG' t2\\nWHERE t1.Entity_2 = t2.CNG ;\\n\\n\\n--OR t1.Entity_1 = t2.CNG\\n\\nDROP TABLE IF EXISTS FinalGraph;\\nCREATE TABLE FinalGraph(Entity_1 TEXT, Type_1 TEXT, Entity_2 TEXT, Type_2 TEXT, Weight INTEGER);\\n\\nINSERT INTO FinalGraph(Entity_1, Type_1, Entity_2, Type_2, Weight)\\nSELECT CNG_Group, 'CNG_Group', Entity_1, Type_1, SUM(Weight)\\nFROM TempGraph\\nGROUP BY CNG_Group, Entity_1;\\n\\n\""
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "Run this sql code to create our final graph with 4 nodes CNG, Lemma, Word, CNG_Groups\n",
-    "DROP TABLE IF EXISTS Tempgraph;\n",
-    "CREATE TABLE Tempgraph(Entity_1 TEXT, Type_1 TEXT, Entity_2 TEXT, Type_2 TEXT, Weight INTEGER, CNG_Group TEXT);\n",
-    "\n",
-    "\n",
-    "INSERT INTO Tempgraph(Entity_1, Type_1, Entity_2, Type_2, Weight, CNG_Group)\n",
-    "SELECT t1.Entity_1, t1.Type_1, t1.Entity_2, t1.Type_2, t1.Weight, t2.CNG_Group\n",
-    "FROM Graph t1, 'CNG&CNGG' t2\n",
-    "WHERE t1.Entity_2 = t2.CNG ;\n",
-    "a\n",
-    "\n",
-    "--OR t1.Entity_1 = t2.CNG\n",
-    "\n",
-    "DROP TABLE IF EXISTS FinalGraph;\n",
-    "CREATE TABLE FinalGraph(Entity_1 TEXT, Type_1 TEXT, Entity_2 TEXT, Type_2 TEXT, Weight INTEGER);\n",
-    "\n",
-    "INSERT INTO FinalGraph(Entity_1, Type_1, Entity_2, Type_2, Weight)\n",
-    "SELECT CNG_Group, 'CNG_Group', Entity_1, Type_1, SUM(Weight)\n",
-    "FROM TempGraph\n",
-    "GROUP BY CNG_Group, Entity_1;\n",
-    "\n",
-    "'''"
    ]
   }
  ],
