--- a/Denominators.ipynb
+++ b/Denominators.ipynb
@@ -36,7 +36,9 @@
    },
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(\"Test.db\")"
+    "#again, run it on Extracted.db in the server\n",
+    "conn = sqlite3.connect(\"Test.db\")\n",
+    "#conn = sqlite3.connect(\"Extracted.db\")"
    ]
   },
   {
@@ -161,6 +163,7 @@
    "outputs": [],
    "source": [
     "d = defaultdict(set)\n",
+    "#we use a dictonary of sets as we want count of distinct filenames, so taking union is easy\n",
     "dLemma = defaultdict(set)\n",
     "dWord = defaultdict(set)"
    ]
@@ -180,7 +183,9 @@
    ],
    "source": [
     "for r, i in df.iterrows():\n",
+    "    #iterating through each Lemma/CNG/word in Each scentence\n",
     "    d[i['CNG']].add(i['Filename'])\n",
+    "    #since they are sets we will get only distinct values\n",
     "    dLemma[i['Lemma']].add(i['Filename'])\n",
     "    dWord[i['Word']].add(i['Filename'])\n",
     "\n",
@@ -197,8 +202,11 @@
    "source": [
     "CNGG_count = {}\n",
     "for key in dictnoun.keys() :\n",
+    "    #iterating thorugh all CNG_groups of type nouns\n",
     "    uni = set()\n",
+    "    #now we take the union of all the files which CNG's of a CNG Group occur in\n",
     "    for i in dictnoun[key]:\n",
+    "        #iterating though CNG's in CNG_Group\n",
     "        uni = uni.union(d[i])\n",
     "    CNGG_count[key] = len(uni)\n",
     "    \n",
@@ -437,7 +445,8 @@
     }
    ],
    "source": [
-    "print(dictverb['10_du'])"
+    "print(dictverb['10_du'])\n",
+    "#checking"
    ]
   },
   {
