--- a/FeaturesMetapath.ipynb
+++ b/FeaturesMetapath.ipynb
@@ -152,7 +152,9 @@
    },
    "outputs": [],
    "source": [
-    "innerdict = merge_two_dicts(CNG_count, CNGG_count)"
+    "innerdict = merge_two_dicts(CNG_count, CNGG_count)\n",
+    "#we merge them for easier selection in the future\n",
+    "#as denominators in metapath3,4 are either count of CNG or CNG_Group"
    ]
   },
   {
@@ -180,14 +182,21 @@
     "def mp2(metapath2, sample):\n",
     "\n",
     "    for mp2i,mp2r in metapath2.iterrows():\n",
+    "        #iterating through all metapaths of size 2\n",
     "        node1 = mp2r['node1']\n",
     "        node2 = mp2r['node2']\n",
+    "        #since it is a metapath of size 2 we have only 2 nodes\n",
     "\n",
     "        vector = []\n",
     "\n",
     "        for i,r in sample.iterrows():\n",
+    "            #iterating through 11,000 samples we selected\n",
     "            den = 0\n",
-    "\n",
+    "            #initializing denominator of bigram probability to 0\n",
+    "            \n",
+    "            #checking to see what type of External nodes are there in the metapath\n",
+    "            #assigning den as per type of node\n",
+    "            \n",
     "            if node1 == 'Lemma':\n",
     "                value1 = r['Entity_1'].split(\"_\")[0]\n",
     "                den = Lemma_count[value1]\n",
@@ -207,10 +216,12 @@
     "                value2 = r['Entity_2']        \n",
     "\n",
     "            if den == 0:\n",
+    "                #this is okay as we will be considering metapaths with maximum unique values \n",
     "                prob12 = 0\n",
     "            else:\n",
     "                \n",
-    "                temp = graph.loc[ (graph['Entity_1'] == value1) & (graph['Entity_2'] == value2)]                \n",
+    "                temp = graph.loc[ (graph['Entity_1'] == value1) & (graph['Entity_2'] == value2)] \n",
+    "                #temp is used to get numeratr of bigram probabily from Graph\n",
     "#               temp = pd.read_sql(\"SELECT Weight FROM Graph WHERE Entity_1 = '%s' AND Entity_2 = '%s' \" %(value1, value2))\n",
     "                prob12 = temp.Weight[0]/den\n",
     "\n",
@@ -234,9 +245,11 @@
     "def mp3(metapath3, sample):\n",
     "    \n",
     "    for mp3i,mp3r in metapath3.iterrows():\n",
+    "        #iterating through all metapaths of size 3\n",
     "        node1 = mp3r['node1']\n",
     "        node2 = mp3r['node2']\n",
     "        node3 = mp3r['node3']\n",
+    "        #since it is a metapath of size 3 we have only 3 nodes\n",
     "        vector = []\n",
     "\n",
     "        for i,r in sample.iterrows():\n",
@@ -263,6 +276,7 @@
     "                value3 = r['Entity_2']\n",
     "\n",
     "            den2 = innerdict[node2]\n",
+    "            #selecting from innerdict as it has counts of both CNG and CNG_Groups\n",
     "\n",
     "            if den1 == 0:\n",
     "                prob12 = 0\n",
@@ -298,10 +312,13 @@
     "    \n",
     "\n",
     "    for mp4i,mp4r in metapath4.iterrows():\n",
+    "        #iterating through all metapaths of size 4\n",
     "        node1 = mp4r['node1']\n",
     "        node2 = mp4r['node2']\n",
     "        node3 = mp4r['node3']\n",
     "        node4 = mp4r['node4']\n",
+    "        \n",
+    "        #since it is a metapath of size 4 we have only 4 nodes\n",
     "        vector = []\n",
     "\n",
     "        for i,r in sample.iterrows():\n",
