--- a/GraphCheck.ipynb
+++ b/GraphCheck.ipynb
@@ -33,24 +33,14 @@
    ],
    "source": [
     "'''\n",
-    "Requirement : To create a graph which has all the Co-occurance of each edge with another edge \n",
-    "Lemma: Root word\n",
-    "CNG: Suffix\n",
-    "Lemma+CNG: Makes a word \n",
-    "We have 3 nodes Lemma, CNG, Lemma+CNG so we will have possibilties of 9 edges/coccourances types.\n",
-    "but their direction does not matter so we can use 6 unique pairs\n",
-    "What is co-occurance and why are we using it?\n",
-    "Co-occurance : Lets take an exammple of a lemma co-occuring with a cng , so in a sentence if a lemma and cng exist but not in the \n",
-    "same index1 and index 2 they are said to co-occur in that sentence. similarly rest of the co=ocurances can be defined. \n",
-    "\n",
+    "this file is used to check the graph we created using sql, we create another graph with the same concpet \n",
+    "but by iterating through each row. This is done on a server with lot of memory and is the bruteforce approach\n",
+    "to making the graph. So we do this only for 1000 entries.\n",
     "'''\n",
     "\n",
-    "\n",
-    "#dfe = df_extraceted \n",
     "conn = sqlite3.connect('Extracted.db')\n",
     "dfe = pd.read_sql(sql = 'SELECT * FROM Extracted', con = conn)\n",
-    "print(dfe.head())\n",
-    "\n"
+    "print(dfe.head())\n"
    ]
   },
   {
@@ -75,34 +65,45 @@
     "global z\n",
     "df = pd.DataFrame(columns = ['S_no','Entity_1', 'Type_1', 'Entity_2', 'Type_2', 'Weight'])\n",
     "global df\n",
+    "#df is our graph that we want to create\n",
+    "\n",
     "print(df)\n",
-    "#dfe.Filename.unique()\n",
+    "\n",
     "\n",
     "def extraction(start, end):\n",
     "    \n",
     "    try:\n",
     "        for sentence in dfe.Filename.unique():\n",
-    "\n",
-    "            if sentence%100 == 0:\n",
-    "                print(sentence, end = ' ')\n",
+    "            #dfe.Filename.unique() returns all the unique filenames through which we will iterate\n",
+    "            \n",
+    "            #if sentence%100 == 0: \n",
+    "                #print(sentence, end = ' ')\n",
+    "                #to show progress of execution\n",
     "\n",
     "\n",
     "            temp = pd.read_sql_query(\"SELECT Lemma, CNG, Word FROM Extracted WHERE Filename = %d\" %(sentence), conn)\n",
+    "            #selecting all Lemma, CNG pairs from a scentence/file.\n",
     "\n",
     "            for i in range(len(temp.Lemma)):\n",
+    "                #iterating through all the values once\n",
     "\n",
     "                for j in range(len(temp.Lemma)):\n",
+    "                    #iterating through all the values for the 2nd time so that we can compare\n",
     "\n",
-    "                    if i != j :\n",
+    "                    if i != j : #condition so that values in same row are not counted\n",
     "\n",
     "                        #lemma lemma edge\n",
     "                        values = df.query(\"Entity_1 == '%s' & Entity_2 == '%s' \" %(str(temp.Lemma[i]), str(temp.Lemma[j])))\n",
+    "                        #checking if a edge exists in the graph or it needs to be created\n",
     "\n",
-    "                        if values.empty :\n",
+    "                        if values.empty : \n",
+    "                            #values.empty return true if dataframe is empty\n",
+    "                            #creating the edge\n",
     "                            df.loc[z] = [z, temp.Lemma[i], 'Lemma', temp.Lemma[j], 'Lemma', 1]\n",
     "                            z += 1\n",
     "\n",
     "                        else:\n",
+    "                            #as the edge already exists we just increase the count\n",
     "                            df.Weight[values['S_no']] += 1\n",
     "\n",
     "\n",
@@ -175,7 +176,7 @@
    "source": [
     "#threading the process to increase speed/ parallel processing\n",
     "#no of files = 442383\n",
-    "#we will check for 10000 files, and use the sql code from GraphFinal.sql on the same 1000 files\n",
+    "#we will check for 1000 files, and use the sql code from GraphFinal.sql on the same 1000 files\n",
     "w = 0\n",
     "y = 1000\n",
     "itr = 1\n",
