--- a/MetapathsGeneration.ipynb
+++ b/MetapathsGeneration.ipynb
@@ -44,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect('Extracted.db')\n"
+    "conn = sqlite3.connect('Extracted.db')"
    ]
   },
   {
@@ -55,7 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "CNG = pd.read_sql(sql = 'SELECT CNG FROM Extracted GROUP BY CNG', con = conn)\n"
+    "CNG = pd.read_sql(sql = 'SELECT CNG FROM Extracted GROUP BY CNG', con = conn)\n",
+    "#extracting all the distinct CNG's from the scentences"
    ]
   },
   {
@@ -100,7 +101,8 @@
    },
    "outputs": [],
    "source": [
-    "CNGG = list(set(list(dictnoun.keys())).union(set(list(dictverb.keys()))) )"
+    "#creating a list which contains all distinct CNG Groups\n",
+    "CNGG = list(set(list(dictnoun.keys())).union(set(list(dictverb.keys()))))"
    ]
   },
   {
@@ -111,9 +113,10 @@
    },
    "outputs": [],
    "source": [
-    "#CNG_list contains all the possible entries for internal node\n",
+    "#CNG_list contains all the possible entries for internal nodes, i.e. distinct CNG's + distinct CNG_Groups\n",
     "CNG_list = np.array(CNG['CNG']).tolist()\n",
-    "CNG_list = list(set(CNG_list).union(set(CNGG)) )"
+    "CNG_list = list(set(CNG_list).union(set(CNGG)) )\n",
+    "#done using union of 2 sets"
    ]
   },
   {
@@ -144,7 +147,10 @@
    "outputs": [],
    "source": [
     "#Internal nodes will be of size 0, 1 or 2 \n",
+    "#0 for metapath of size 2 as it contains only External nodes, 1 for metapath of size 3 and 2 for metapath of size 4.\n",
     "x = product(CNG_list,repeat = 2)\n",
+    "#product is a function of itertools which generates permutations with replacement.\n",
+    "#we need permuations as order will matter in the metapath as probabilty of going from one node to another depends on direction of metapath.\n",
     "Internalnode2 = [i for i in x]\n",
     "Internalnode1 = CNG_list"
    ]
@@ -157,7 +163,7 @@
    },
    "outputs": [],
    "source": [
-    "#External nodes are \n",
+    "#External nodes will only be Lemma, Word or CNG as we are building the skeleton of the metapaths\n",
     "x = product([\"Lemma\",\"Word\",\"CNG\"], repeat = 2)\n",
     "Externalnodes = [i for i in x]"
    ]
@@ -170,15 +176,18 @@
    },
    "outputs": [],
    "source": [
+    "#creating metapaths as list of lists\n",
     "metapath2 = Externalnodes \n",
     "metapath3 = [[]]\n",
     "metapath4= [[]]\n",
     "for i in Externalnodes:\n",
     "    for j in Internalnode1:\n",
     "        metapath3.append([i[0], j, i[1]])\n",
+    "        #adding metapaths of size 3 according to our defination\n",
     "        \n",
     "    for k in Internalnode2:\n",
-    "        metapath4.append([i[0], k[0], k[1], i[1]])"
+    "        metapath4.append([i[0], k[0], k[1], i[1]])\n",
+    "        #similarly adding metapaths of size 4"
    ]
   },
   {
