--- a/Sampling.ipynb
+++ b/Sampling.ipynb
@@ -22,7 +22,14 @@
    },
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(\"Test.db\")"
+    "'''\n",
+    "This code has been run on a test database, which contains very few entries,\n",
+    "Make sure to use the original database during actual execution.\n",
+    "Test.db can be made from the databases that were created from inital extraction\n",
+    "1.db\n",
+    "'''\n",
+    "conn = sqlite3.connect(\"Test.db\")\n",
+    "#conn = sqlite3.connect(\"Extracted.db\")"
    ]
   },
   {
@@ -135,7 +142,8 @@
     }
    ],
    "source": [
-    "df.describe()"
+    "df.describe()\n",
+    "#checking the count "
    ]
   },
   {
@@ -146,7 +154,8 @@
    },
    "outputs": [],
    "source": [
-    "ft = df.groupby(['Weight']).agg(['count'])"
+    "ft = df.groupby(['Weight']).agg(['count'])\n",
+    "#frequency distribution"
    ]
   },
   {
@@ -236,7 +245,8 @@
    },
    "outputs": [],
    "source": [
-    "dfs = df.sort_values( by = ['Weight'], ascending = False) "
+    "dfs = df.sort_values( by = ['Weight'], ascending = False) \n",
+    "#sorting the entire data accoring to weights "
    ]
   },
   {
@@ -247,7 +257,8 @@
    },
    "outputs": [],
    "source": [
-    "dfs = dfs.reset_index(drop = True)"
+    "dfs = dfs.reset_index(drop = True)\n",
+    "#reset index as we sorted the dtaframe so index will be random"
    ]
   },
   {
@@ -258,7 +269,8 @@
    },
    "outputs": [],
    "source": [
-    "dfs = dfs.reset_index(drop = False)"
+    "dfs = dfs.reset_index(drop = False)\n",
+    "#retriving index values to plot on graph"
    ]
   },
   {
@@ -894,7 +906,8 @@
    ],
    "source": [
     "sns.lmplot(x = 'index', y = 'Weight', data = dfs)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#plotting our data "
    ]
   },
   {
@@ -909,7 +922,10 @@
     "#min = 1\n",
     "#number = 132609\n",
     "#from the plot we can see that we should consider weights below 100\n",
-    "dfs = dfs.loc[dfs['Weight'] < 100 ]"
+    "#the same is done for our original database and we drop weights >20,000 as they are outliers\n",
+    "\n",
+    "dfs = dfs.loc[dfs['Weight'] < 100 ]\n",
+    "#dfs = dfs.loc[dfs['Weight'] < 20000 ]\n"
    ]
   },
   {
@@ -1613,7 +1629,22 @@
    "source": [
     "#sampling 364 values (root of count)\n",
     "ids = [x**2 for x in range(1,365)]\n",
-    "#idstr = ', '.join(ids)"
+    "#idstr = ', '.join(ids)\n",
+    "\n",
+    "\n",
+    "#for orignal graph \n",
+    "'''\n",
+    "total no. of word->word edges = 16069844\n",
+    "sq. root of total no = 4008.720\n",
+    "so at x =10000\n",
+    "we wantindex to be 4008**2\n",
+    "i want 10000 samples, I will sample exponetially as my data is distributed as shown above so i sample as\n",
+    "\n",
+    "10000*10000 *x = 16069844\n",
+    "x = 0.16\n",
+    "\n",
+    "ids = [round((x**2)*0.16) for x in range(1,10001)]\n",
+    "'''"
    ]
   },
   {
@@ -1624,7 +1655,8 @@
    },
    "outputs": [],
    "source": [
-    "dfs = dfs.loc[dfs.index.isin(ids)]"
+    "dfs = dfs.loc[dfs.index.isin(ids)]\n",
+    "#using the id's of rows we generated above to select values from WordGraph"
    ]
   },
   {
@@ -2241,7 +2273,7 @@
     "#to add word pairs that do not co-occur anytime. \n",
     "\n",
     "'''\n",
-    "INSERT INTO Sample( Entity_1, Type_1, Entity_2, Type_2, Weight)\n",
+    "\n",
     "SELECT e.Word, 'Word', n.Word, 'Word', 0\n",
     "FROM Extracted e, Node n\n",
     "WHERE e.Filename <> n.Filename AND e.rowid <> n.rowid\n",
