--- a/ThreadExtraction.ipynb
+++ b/ThreadExtraction.ipynb
@@ -9,6 +9,9 @@
    },
    "outputs": [],
    "source": [
+    "#for refrence please visit: https://zenodo.org/record/803508\n",
+    "#you can find all the pickle files and the code used to initally create them\n",
+    "\n",
     "import pickle         #used to read pickle instances of an object\n",
     "import sqlite3        #for sqlite databases/local databases\n",
     "import pandas as pd   #for general database operations\n",
@@ -24,7 +27,12 @@
    },
    "outputs": [],
    "source": [
-    "#pickles are an instance of class DCS\n",
+    "'''\n",
+    "pickles files are an instance of class DCS. DCS Class has been built to\n",
+    "store data from 4.4 Lakh Sanskrit sentences which have been tokenized \n",
+    "and then split into Lemma(Root Word) and their Morphological class(Verb or Noun).\n",
+    "\n",
+    "'''\n",
     "\n",
     "class DCS:\n",
     "    def __init__(self, sent_id, sentence):\n",
@@ -50,37 +58,50 @@
     "#next time make tables in the same db file not diffrent files!\n",
     "\n",
     "def extraction(start, end,) :\n",
+    "    #the 2 if statements have only been used because some files are missing\n",
     "    if start == 0 : \n",
-    "        start = 1 # for proper indexing\n",
+    "        start = 1 \n",
+    "        # for proper indexing\n",
     "    if start == 364900 :\n",
-    "        start = start+1\n",
-    "    conn = sqlite3.connect(str(start)+'.db')  #creating a connection to local database\n",
+    "        start = start+1 \n",
+    "        #file 364900 is missing, so error in creating database\n",
+    "    conn = sqlite3.connect(str(start)+'.db')  \n",
+    "    #creating a connection to local database\n",
     "    df = pd.DataFrame(columns = ['Filename', 'Lemma', 'CNG', 'Index1', 'Index2'])\n",
     "    print(df.head())\n",
-    "    z=0\n",
     "    \n",
-    "    for i in range(start,end):\n",
-    "        if i > 442383:\n",
+    "    z=0\n",
+    "    #z is an index used to iterate through the dataframe\n",
+    "    \n",
+    "    for i in range(start,end): \n",
+    "        #iterating through each file \n",
+    "        if i > 442383: \n",
+    "            #stop loop when index exceeds number of files\n",
     "            break\n",
     "        \n",
-    "        try:\n",
+    "        try: \n",
+    "            #using try except because of missing files \n",
     "            output_load = pickle.load(open(\"C:\\\\Users\\\\Mooga\\\\Documents\\\\NLP Project\\\\DCS_pick\" +\"\\\\\" + str(i) + '.p', \"rb\"), encoding='utf-8')\n",
     "           \n",
-    "            for j in range(len(output_load.lemmas)):\n",
+    "            for j in range(len(output_load.lemmas)): \n",
+    "                #iterating through each word, a word can contain 1 or more Lemmas\n",
     "                \n",
-    "                for k in range(len(output_load.lemmas[j])):\n",
+    "                for k in range(len(output_load.lemmas[j])): \n",
+    "                    #iterating through each lemmma in a word\n",
+    "                    #adding a new row in the dataframe\n",
     "                    df.loc[z]= [i, output_load.lemmas[j][k], output_load.cng[j][k], j, k]\n",
     "                    z = z+1  \n",
     "        except:\n",
     "            pass\n",
     "        if i%100 == 0 :\n",
+    "            #to show status of execution\n",
     "            print(i,j,k)\n",
     "        \n",
     "    df.to_sql(str(start)+'.db', conn)\n",
+    "    #dumping dataframe to a sql table\n",
     "    conn.close()\n",
     "    print(start, ' to ', end)\n",
-    "\n",
-    "    \n",
+    "  \n",
     "  "
    ]
   },
@@ -5364,11 +5385,15 @@
    "source": [
     "#threading the process to increase speed/ parallel processing\n",
     "#no of files = 442383\n",
-    "w = 0\n",
+    "w = 0 \n",
     "y = 2225\n",
+    "#w,y are used to divide the files so that they can be processed parallely\n",
+    "\n",
     "itr = 20\n",
+    "#we are running 10 threads, 20 times \n",
     "for x in range(itr):\n",
     "    \n",
+    "    #creates the object used in threading\n",
     "    t1 = threading.Thread(target=extraction, args=(w,w+y))\n",
     "    w += y\n",
     "    t2 = threading.Thread(target=extraction, args=(w,w+y))\n",
@@ -5390,7 +5415,7 @@
     "    t10 = threading.Thread(target=extraction, args=(w,w+y))\n",
     "    w += y\n",
     "\n",
-    "                        \n",
+    "    #starts execution                   \n",
     "    t1.start()\n",
     "    t2.start()\n",
     "    t3.start()\n",
@@ -5402,6 +5427,7 @@
     "    t9.start()\n",
     "    t10.start()\n",
     "\n",
+    "    #joins all running processes\n",
     "    t1.join()\n",
     "    t2.join()\n",
     "    t3.join()\n",
@@ -5455,7 +5481,7 @@
     }
    ],
    "source": [
-    "#error due to missing file \n",
+    "#error due to missing file, 364900 is missing and sice we used the number as name of database, the database was not created \n",
     "extraction(364900,367125)"
    ]
   },
@@ -5672,35 +5698,45 @@
     }
    ],
    "source": [
-    "#joining sql files \n",
+    "#joining sql files\n",
     "conn1 = sqlite3.connect('1.db')\n",
     "main = pd.read_sql(\"SELECT * FROM '1.db'\",con=conn1)\n",
+    "#querying values from database and storing in pandas\n",
+    "\n",
     "main = main.drop(['index'], axis =1)\n",
     "#print(main.head())\n",
+    "#drop index as it is useless \n",
+    "\n",
     "z = 2225\n",
+    "#z is the step size we used while threading \n",
+    "#198 is the number of databases created after threading\n",
+    "\n",
     "for i in range (198) :\n",
     "    if z == 364900 :\n",
+    "        #taking care of missing file\n",
     "        z = z+1\n",
+    "        \n",
     "    conn2 = sqlite3.connect(str(z) + '.db')\n",
     "    temp = pd.read_sql(\"SELECT * FROM '\" + str(z) + \".db'\",con=conn2)\n",
     "    temp = temp.drop(['index'], axis =1)\n",
     "    #print(temp.head())\n",
+    "    \n",
     "    main = pd.concat([main, temp])\n",
     "    conn2.close()\n",
+    "    \n",
     "    if z == 364901 :\n",
+    "        #due to missing file, reset the index or the following files will show an error\n",
     "        z = z-1\n",
     "    z += 2225\n",
     "    print(i)\n",
     "\n",
     "main = main.reset_index(drop = True)\n",
+    "#redefining the index\n",
+    "\n",
     "conn2 = sqlite3.connect('Extracted.db')\n",
     "main.to_sql('MyTable', conn2)\n",
     "conn1.close()\n",
-    "conn2.close()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "conn2.close()\n"
    ]
   }
  ],
