--- a/Denominators.ipynb
+++ b/Denominators.ipynb
@@ -2840,7 +2840,7 @@
     "with open('CNG_count.pickle', 'wb') as handle:\n",
     "    pickle.dump(CNG_count, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('Lemmma_count.pickle', 'wb') as handle:\n",
+    "with open('Lemma_count.pickle', 'wb') as handle:\n",
     "    pickle.dump(Lemma_count, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
     "with open('Word_count.pickle', 'wb') as handle:\n",
