--- a/Sampling.ipynb
+++ b/Sampling.ipynb
@@ -2264,22 +2264,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dfs.to_sql(\"Sample\", conn)\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#the code above this point is seprate from code below, run them sepratly\n",
+    "\n",
     "#to add word pairs that do not co-occur anytime. \n",
+    "#We want to include examples in which words do not occur, as our models will selct what features it finds resonable\n",
+    "\n",
+    "sample = pd.read_sql(\"SELECT * FROM Sample\", conn)\n",
+    "\n",
+    "graph = pd.read_sql(\"SELECT * FROM WordGraph \", conn)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Number of times a word co-occurs with another word is very less, but the number of times it dosent co-occur with \n",
+    "other words is very high, so if we use something like inner join and try to find all the possible values and \n",
+    "the sample 1000 from it, its highly inefficent as the data would explode! . So i take alternative word pairs from \n",
+    "the sample as below. \n",
     "\n",
     "'''\n",
     "\n",
-    "SELECT e.Word, 'Word', n.Word, 'Word', 0\n",
-    "FROM Extracted e, Node n\n",
-    "WHERE e.Filename <> n.Filename AND e.rowid <> n.rowid\n",
-    "GROUP BY e.Word, n.Word;\n",
     "\n",
-    "'''"
+    "zeros = pd.DataFrame(columns = ['Entity_1', 'Type_1', 'Entity_2', 'Type_2', 'Weight'])\n",
+    "\n",
+    "pairs = []\n",
+    "\n",
+    "for i,r in sample.iterrows():\n",
+    "    #iterating through all the samples\n",
+    "    if i == 9998:\n",
+    "        #this condition is to prevent the code below from throwing an index error as when it is in the 2nd last sample i want it to stop\n",
+    "        break\n",
+    "    pairs.append([ c.Entity_1[i], c.Entity_2[i+1] ])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#reversing pairs as pairs with weight 1 are most ambiguous so i want those values in my sample\n",
+    "z =0\n",
+    "for i in reversed(pairs):\n",
+    "    #iterating through the pairs we just made\n",
+    "    print i[0],i[1]\n",
+    "\n",
+    "    temp = graph.loc[ (graph['Entity_1'] == i[0]) & (graph['Entity_2'] == i[1]) ]\n",
+    "    #checking if weight is 0, as if its zero, temp will be empty\n",
+    "    if temp.empty:\n",
+    "        #if weight is zero we add it to zeros\n",
+    "        zeros.loc[z] = [i[0], 'Word', i[1], 'Word', 0]\n",
+    "        z += 1\n",
+    "        print z\n",
+    "    else:\n",
+    "        #if its not zero, we pass\n",
+    "        pass\n",
+    "    #we stop the loop after we get 1000 samples we want\n",
+    "    if z>1000:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "zeros.to_sql(\"zeros\", conn)\n",
+    "conn.close()\n"
    ]
   }
  ],
