Remove useless code in GraphDictonary

--- a/GraphDictonary.ipynb
+++ b/GraphDictonary.ipynb
@@ -83,22 +83,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def to_dict(df, Type_1, Type_2):\n",
-    "    d = dict()\n",
-    "    for i,row in df.iterrows():\n",
-    "        d[row['Entity_1'] + '|' + row['Entity_2']] = row['Weight']\n",
-    "    with open( Type_1 + '|' + Type_2 + '.json', 'w') as fp:\n",
-    "        json.dump(d, fp)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {
     "collapsed": true
@@ -121,9 +105,7 @@
     "to_dict(df13, 'CNG_Group', 'Lemma')   \n",
     "to_dict(df14, 'CNG_Group', 'Word')    \n",
     "to_dict(df15, 'CNG_Group', 'CNG')     \n",
-    "to_dict(df16, 'CNG_Group', 'CNG_Group')\n",
-    "\n",
-    "\n"
+    "to_dict(df16, 'CNG_Group', 'CNG_Group')\n"
    ]
   }
  ],
