Fix in Sampling

--- a/Sampling.ipynb
+++ b/Sampling.ipynb
@@ -922,10 +922,10 @@
     "#min = 1\n",
     "#number = 132609\n",
     "#from the plot we can see that we should consider weights below 100\n",
-    "#the same is done for our original database and we drop weights >20,000 as they are outliers\n",
+    "#the same is done for our original database and we drop weights >10,000 as they are outliers\n",
     "\n",
     "dfs = dfs.loc[dfs['Weight'] < 100 ]\n",
-    "#dfs = dfs.loc[dfs['Weight'] < 20000 ]\n"
+    "#dfs = dfs.loc[dfs['Weight'] < 10000 ]\n"
    ]
   },
   {
@@ -2289,7 +2289,8 @@
     "\n",
     "sample = pd.read_sql(\"SELECT * FROM Sample\", conn)\n",
     "\n",
-    "graph = pd.read_sql(\"SELECT * FROM WordGraph \", conn)\n"
+    "with open('Word|Word.json', 'r') as fp:\n",
+    "    graph = json.load(fp)"
    ]
   },
   {
@@ -2308,8 +2309,7 @@
     "\n",
     "'''\n",
     "\n",
-    "\n",
-    "zeros = pd.DataFrame(columns = ['Entity_1', 'Type_1', 'Entity_2', 'Type_2', 'Weight'])\n",
+    "zeroes = pd.DataFrame(columns = ['Entity_1', 'Type_1', 'Entity_2', 'Type_2', 'Weight'])\n",
     "\n",
     "pairs = []\n",
     "\n",
@@ -2318,7 +2318,7 @@
     "    if i == 9998:\n",
     "        #this condition is to prevent the code below from throwing an index error as when it is in the 2nd last sample i want it to stop\n",
     "        break\n",
-    "    pairs.append([ c.Entity_1[i], c.Entity_2[i+1] ])\n"
+    "    pairs.append([ sample.Entity_1[i], sample.Entity_2[i+1] ])\n"
    ]
   },
   {
@@ -2329,25 +2329,22 @@
    },
    "outputs": [],
    "source": [
-    "#reversing pairs as pairs with weight 1 are most ambiguous so i want those values in my sample\n",
-    "z =0\n",
-    "for i in reversed(pairs):\n",
-    "    #iterating through the pairs we just made\n",
-    "    print i[0],i[1]\n",
     "\n",
-    "    temp = graph.loc[ (graph['Entity_1'] == i[0]) & (graph['Entity_2'] == i[1]) ]\n",
-    "    #checking if weight is 0, as if its zero, temp will be empty\n",
-    "    if temp.empty:\n",
-    "        #if weight is zero we add it to zeros\n",
-    "        zeros.loc[z] = [i[0], 'Word', i[1], 'Word', 0]\n",
+    "z =0\n",
+    "#index of dataframe zeroes\n",
+    "\n",
+    "for edge in pairs:\n",
+    "    #iterating through the edges we just made\n",
+    "    try:\n",
+    "        #checking if the edge exists in the graph, if it exists do nothing\n",
+    "        weight = graph[edge[0] + '|' + edge[1] ]\n",
+    "        print 'exists'\n",
+    "    except:\n",
+    "        #if edge not in graph we add it to zeroes\n",
+    "        zeroes.loc[z] = [edge[0], 'Word', edge[1], 'word', 0]\n",
     "        z += 1\n",
-    "        print z\n",
-    "    else:\n",
-    "        #if its not zero, we pass\n",
-    "        pass\n",
-    "    #we stop the loop after we get 1000 samples we want\n",
-    "    if z>1000:\n",
-    "        break\n"
+    "        print edge\n",
+    "          "
    ]
   },
   {
@@ -2358,7 +2355,19 @@
    },
    "outputs": [],
    "source": [
-    "zeros.to_sql(\"zeros\", conn)\n",
+    "# we get 7026 entries in zeroes so i want 1000, so i select an edge if it isa  multiple of 7\n",
+    "zeroes = zeroes.loc[(zeroes.index % 7 == 0) & (zeroes.index < 7000)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "zeros.to_sql(\"Zeroes\", conn)\n",
     "conn.close()\n"
    ]
   }
