Extraction of features using graph as a dictionary, in FeaturesMetapathDict

--- a/GraphDictonary.ipynb
+++ b/GraphDictonary.ipynb
@@ -105,7 +105,8 @@
     "to_dict(df13, 'CNG_Group', 'Lemma')   \n",
     "to_dict(df14, 'CNG_Group', 'Word')    \n",
     "to_dict(df15, 'CNG_Group', 'CNG')     \n",
-    "to_dict(df16, 'CNG_Group', 'CNG_Group')\n"
+    "to_dict(df16, 'CNG_Group', 'CNG_Group')\n",
+    "\n"
    ]
   }
  ],
